tests/toy/neg/001465_mutation.toylang
program a = { var a : then; } .
